refactor(CommandType): 조건문 분기 단순화